[package]
name = "tari_console_wallet"
version = "0.28.1"
authors = ["The Tari Development Community"]
edition = "2018"

[dependencies]
tari_wallet = { path = "../../base_layer/wallet", features = ["bundled_sqlite"] }
tari_crypto = { git = "https://github.com/tari-project/tari-crypto.git", branch = "main" }
tari_common = { path = "../../common" }
tari_app_utilities = { path = "../tari_app_utilities" }
tari_comms = { path = "../../comms" }
tari_comms_dht = { path = "../../comms/dht" }
tari_common_types = { path = "../../base_layer/common_types" }
tari_libtor = { path = "../../infrastructure/libtor" }
tari_p2p = { path = "../../base_layer/p2p", features = ["auto-update"] }
tari_app_grpc = { path = "../tari_app_grpc" }
tari_shutdown = { path = "../../infrastructure/shutdown" }
tari_key_manager = { path = "../../base_layer/key_manager" }
tari_utilities = "0.3.0"

sha2 = "0.9.5"
digest = "0.9.0"
chrono = { version = "0.4.19", default-features = false }
bitflags = "1.2.1"
futures = { version = "^0.3.16", default-features = false, features = ["alloc"] }
crossterm = { version = "0.17" }
rand = "0.8"
unicode-width = "0.1"
unicode-segmentation = "1.6.0"
log = { version = "0.4.8", features = ["std"] }
qrcode = { version = "0.12" }
regex = "1.5.4"
rpassword = "5.0"
rustyline = "9.0"
strum = "0.22"
strum_macros = "0.22"
tokio = { version = "1.11", features = ["signal"] }
thiserror = "1.0.26"
tonic = "0.6.2"
tracing = "0.1.26"
tracing-opentelemetry = "0.15.0"
tracing-subscriber = "0.2.20"

# network tracing, rt-tokio for async batch export
opentelemetry = { version = "0.16", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-jaeger = { version = "0.15", features = ["rt-tokio"] }

[dependencies.tari_core]
path = "../../base_layer/core"
default-features = false
features = ["transactions", "mempool_proto", "base_node_proto"]

[dependencies.tui]
version = "^0.16"
default-features = false
features = ["crossterm"]

[features]
avx2 = ["tari_core/avx2", "tari_crypto/avx2", "tari_wallet/avx2", "tari_comms/avx2", "tari_comms_dht/avx2", "tari_p2p/avx2", "tari_key_manager/avx2"]
libtor = ["tari_libtor/libtor"]

