[package]
name = "tari_merge_mining_proxy"
authors = ["The Tari Development Community"]
description = "The tari merge miner proxy for xmrig"
repository = "https://github.com/tari-project/tari"
license = "BSD-3-Clause"
version = "0.31.0"
edition = "2018"

[features]
default = []
envlog = ["env_logger"]

[dependencies]
tari_app_grpc = { path = "../tari_app_grpc" }
tari_common = { path = "../../common" }
tari_comms = { path = "../../comms/core" }
tari_core = { path = "../../base_layer/core", default-features = false, features = ["transactions"] }
tari_app_utilities = { path = "../tari_app_utilities" }
tari_crypto = { git = "https://github.com/tari-project/tari-crypto.git", tag = "v0.12.5" }
tari_utilities = { git = "https://github.com/tari-project/tari_utilities.git", tag = "v0.3.1" }

anyhow = "1.0.53"
crossterm = { version = "0.17" }
bincode = "1.3.1"
bytes = "1.1"
chrono = { version = "0.4.6", default-features = false }
config = { version = "0.9.3" }
derivative = "2.2.0"
env_logger = { version = "0.7.1", optional = true }
futures = "0.3.5"
hex = "0.4.2"
hyper = "0.14.12"
jsonrpc = "0.12.0"
log = { version = "0.4.8", features = ["std"] }
rand = "0.8"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.57"
structopt = { version = "0.3.13", default_features = false }
thiserror = "1.0.26"
tokio = { version = "1.11", features = ["macros"] }
tonic = "0.6.2"
tracing = "0.1"
url = "2.1.1"

[dev-dependencies]
