[package]
name = "tari_merge_mining_proxy"
authors = ["The Tari Development Community"]
description = "The Tari merge mining proxy for xmrig"
repository = "https://github.com/tari-project/tari"
license = "BSD-3-Clause"
version = "0.38.8"
edition = "2018"

[features]
default = []

[dependencies]
tari_common = { path = "../../common" }
tari_comms = { path = "../../comms/core" }
tari_core = { path = "../../base_layer/core", default-features = false, features = ["transactions"] }
tari_app_utilities = { path = "../tari_app_utilities" }
tari_crypto = { git = "https://github.com/tari-project/tari-crypto.git", tag = "v0.16.0" }
tari_utilities = { git = "https://github.com/tari-project/tari_utilities.git", tag="v0.4.7" }
tari_base_node_grpc_client = {path="../../clients/rust/base_node_grpc_client" }
tari_wallet_grpc_client = {path="../../clients/rust/wallet_grpc_client" }

anyhow = "1.0.53"
crossterm = { version = "0.25.0" }
bincode = "1.3.1"
bytes = "1.1"
chrono = { version = "0.4.6", default-features = false }
clap = { version = "3.1.1", features = ["derive", "env"] }
config = { version = "0.13.0" }
derivative = "2.2.0"
futures = "0.3.5"
hex = "0.4.2"
hyper = "0.14.12"
jsonrpc = "0.12.0"
log = { version = "0.4.8", features = ["std"] }
rand = "0.7.3"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.57"
structopt = { version = "0.3.13", default_features = false }
thiserror = "1.0.26"
tokio = { version = "1.20", features = ["macros"] }
tonic = "0.6.2"
tracing = "0.1"
url = "2.1.1"

[dev-dependencies]
