[package]
name = "tari_miner"
authors = ["The Tari Development Community"]
description = "The tari miner implementation"
repository = "https://github.com/tari-project/tari"
license = "BSD-3-Clause"
version = "0.49.2"
edition = "2018"

[dependencies]
tari_core = { path = "../../base_layer/core", default-features = false }
tari_common = { path = "../../common" }
tari_common_types = { path = "../../base_layer/common_types" }
tari_comms = { path = "../../comms/core" }
tari_app_utilities = { path = "../tari_app_utilities" }
tari_app_grpc = { path = "../tari_app_grpc" }
tari_crypto = { version = "0.16.11"}
tari_utilities = "0.4.10"

borsh = "0.9.3"
crossterm = { version = "0.25.0" }
clap = { version = "3.1.1", features = ["derive"] }
crossbeam = "0.8"
futures = "0.3"
log = { version = "0.4", features = ["std"] }
num_cpus = "1.13"
rand = "0.7.3"
serde = { version = "1.0", default_features = false, features = ["derive"] }
tonic = { version = "0.6.2", features = ["transport"] }
tokio = { version = "1.23", default_features = false, features = ["rt-multi-thread"] }
thiserror = "1.0"
serde_json = "1.0.57"
native-tls = "0.2"
bufstream = "0.1"
chrono = { version = "0.4.19", default-features = false }
hex = "0.4.2"
derivative = "2.2.0"
base64 = "0.13.0"

[dev-dependencies]
prost-types = "0.9"
chrono = { version = "0.4.19", default-features = false }
config = "0.13.0"
